[gd_scene load_steps=4 format=2]

[ext_resource path="res://MatchGame/scripts/countdown.gd" type="Script" id=1]
[ext_resource path="res://MatchGame/sounds/countdown_timer.ogg" type="AudioStream" id=2]
[ext_resource path="res://MatchGame/sounds/countdown_end.ogg" type="AudioStream" id=3]

[node name="countdown" type="Timer"]
script = ExtResource( 1 )

[node name="countdown_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="countdown_end_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="." to="." method="_on_countdown_timeout"]
